<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/card"
        android:gravity="center_horizontal"
        android:title="@string/card_player"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:gravity="center_horizontal"
        android:title="@string/settings"

        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/about"
        android:gravity="center_horizontal"
        android:title="@string/about"
        app:showAsAction="never" />
    <!-- <item
        android:id="@+id/remove_ads"
        android:gravity="center_horizontal"
        android:title="@string/remove_ads"
        app:showAsAction="never" /> -->


</menu>